--- a/SampleApp/Base.lproj/Main.storyboard
+++ b/SampleApp/Base.lproj/Main.storyboard
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="gij-z1-aAV">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,74 +22,77 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pqf-jx-lkg">
-                                <rect key="frame" x="83" y="80" width="264" height="30"/>
+                                <rect key="frame" x="87" y="80" width="285" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3uN-Wi-fJL">
-                                <rect key="frame" x="83" y="129" width="264" height="30"/>
+                                <rect key="frame" x="87" y="129" width="285" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Random Number Generator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bV5-0p-gGS">
-                                <rect key="frame" x="82" y="20" width="211" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Start:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wbY-zu-fWX">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wbY-zu-fWX">
                                 <rect key="frame" x="20" y="83" width="43" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="End:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CXS-0J-5LD">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CXS-0J-5LD">
                                 <rect key="frame" x="28" y="132" width="34" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6K5-1r-Uwd">
-                                <rect key="frame" x="155" y="167" width="64" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6K5-1r-Uwd">
+                                <rect key="frame" x="175" y="167" width="64" height="30"/>
                                 <state key="normal" title="Generate"/>
                                 <connections>
                                     <action selector="clickBtnToGenerateRandomNumber" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="8rf-pI-OOo"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Result: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gnI-33-vM9">
-                                <rect key="frame" x="124" y="332" width="95" height="45"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6f-I1-QnH">
+                                <rect key="frame" x="123.66666666666669" y="383.66666666666669" width="167" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="167" id="xac-av-wSj"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A6f-I1-QnH">
-                                <rect key="frame" x="227" y="337" width="74" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Random Number Generator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bV5-0p-gGS">
+                                <rect key="frame" x="98.666666666666686" y="20" width="216" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="216" id="Ise-ec-khI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="trailing" secondItem="3uN-Wi-fJL" secondAttribute="trailing" id="9cg-0l-Nz2"/>
-                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="leading" secondItem="wbY-zu-fWX" secondAttribute="trailing" constant="24" id="GUr-uo-dHf"/>
-                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="67" id="R5P-xN-VqF"/>
-                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="leading" secondItem="3uN-Wi-fJL" secondAttribute="leading" id="WbT-Dc-abc"/>
-                            <constraint firstItem="3uN-Wi-fJL" firstAttribute="leading" secondItem="CXS-0J-5LD" secondAttribute="trailing" constant="25" id="Wfc-rn-S7g"/>
-                            <constraint firstItem="bV5-0p-gGS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="XO0-On-o5o"/>
-                            <constraint firstItem="bV5-0p-gGS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="XQP-KG-UZI"/>
-                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="top" secondItem="bV5-0p-gGS" secondAttribute="bottom" constant="39" id="dhn-Bd-PrP"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Pqf-jx-lkg" secondAttribute="trailing" constant="12" id="p8G-cL-ztr"/>
-                            <constraint firstItem="3uN-Wi-fJL" firstAttribute="top" secondItem="Pqf-jx-lkg" secondAttribute="bottom" constant="19" id="zhN-vC-9lK"/>
+                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="leading" secondItem="3uN-Wi-fJL" secondAttribute="leading" id="1uM-Ag-4lJ"/>
+                            <constraint firstItem="3uN-Wi-fJL" firstAttribute="leading" secondItem="CXS-0J-5LD" secondAttribute="trailing" constant="25" id="5C7-Bc-ivq"/>
+                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="top" secondItem="bV5-0p-gGS" secondAttribute="bottom" constant="39" id="72N-Po-8Bn"/>
+                            <constraint firstItem="6K5-1r-Uwd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7o3-1r-J92"/>
+                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="trailing" secondItem="3uN-Wi-fJL" secondAttribute="trailing" id="9Be-fh-vvM"/>
+                            <constraint firstItem="wbY-zu-fWX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Caf-Ca-6YT"/>
+                            <constraint firstItem="CXS-0J-5LD" firstAttribute="top" secondItem="wbY-zu-fWX" secondAttribute="bottom" constant="28" id="FXL-Q2-8kN"/>
+                            <constraint firstItem="A6f-I1-QnH" firstAttribute="centerY" secondItem="wfy-db-euE" secondAttribute="top" multiplier="0.51111" constant="50" id="L2Y-3e-leb"/>
+                            <constraint firstItem="3uN-Wi-fJL" firstAttribute="top" secondItem="Pqf-jx-lkg" secondAttribute="bottom" constant="19" id="LjM-0o-AOU"/>
+                            <constraint firstItem="3uN-Wi-fJL" firstAttribute="baseline" secondItem="CXS-0J-5LD" secondAttribute="firstBaseline" id="MyQ-5i-hz4"/>
+                            <constraint firstItem="Pqf-jx-lkg" firstAttribute="leading" secondItem="wbY-zu-fWX" secondAttribute="trailing" constant="24" id="QJ1-jT-hfQ"/>
+                            <constraint firstItem="bV5-0p-gGS" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Yfx-1y-dAZ"/>
+                            <constraint firstItem="A6f-I1-QnH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bf4-69-L14"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Pqf-jx-lkg" secondAttribute="trailing" constant="22" id="kg2-Bt-ubg"/>
+                            <constraint firstItem="6K5-1r-Uwd" firstAttribute="top" secondItem="3uN-Wi-fJL" secondAttribute="bottom" constant="8" symbolic="YES" id="q8f-j1-CgE"/>
+                            <constraint firstItem="bV5-0p-gGS" firstAttribute="centerX" secondItem="A6f-I1-QnH" secondAttribute="centerX" id="xPJ-Zr-2vR"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="1Hv-oW-z5V"/>
@@ -98,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="767.20000000000005" y="134.48275862068968"/>
+            <point key="canvasLocation" x="760.79999999999995" y="129.98500749625188"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="PKY-3a-um1">
