--- a/SampleApp/Base.lproj/Main.storyboard
+++ b/SampleApp/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="760.79999999999995" y="129.98500749625188"/>
+            <point key="canvasLocation" x="984" y="623"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="PKY-3a-um1">
@@ -118,11 +118,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="ZMs-C5-PwS"/>
+                        <segue destination="3lY-Jm-n9S" kind="relationship" relationship="viewControllers" id="ngH-aW-Udi"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nHv-SW-51v" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-98.400000000000006" y="136.28185907046478"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="Xkj-QX-ITN">
+            <objects>
+                <viewController id="3lY-Jm-n9S" customClass="GroceryAppController" customModule="SampleApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UFc-uG-dQh"/>
+                        <viewControllerLayoutGuide type="bottom" id="hQ0-CO-sYY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DPw-3F-biq">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="GvN-LM-efG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="prt-23-LqN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="983" y="-73"/>
         </scene>
     </scenes>
 </document>
